# LOG_Test

./: .gitignore  CMakeLists.txt  build.bat  build.sh
CMake/: Readme  internal_utils.cmake
Configs/: .gitignore  CMakeLists.txt  Doxyfile
includes/: DOC_MainPage.h  Readme
libs/: .gitignore  CMakeLists.txt  Readme
libs/Package1/: CMakeLists.txt  C_Point.cpp
libs/includes/: C_Point.h  Pantheios_header.h  Readme
src/: .gitignore  CMakeLists.txt  LOG_test.cpp  Readme
tests/: CMakeLists.txt  Readme
tests/Package1_tests/: CMakeLists.txt  C_Point_TEST.cpp  TESTS.cpp
tools/: clean.bat  clean.sh
